--- a/Calculator/Calculator.vcxproj.filters
+++ b/Calculator/Calculator.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Exception.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Tracer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h">
@@ -66,6 +69,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Exception.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugNew.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Tracer.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
